# Remote_File_Transfer

./: CMakeLists.txt  README.md
MyClient/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
MyServer/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
